# lab4_arithm_translator

./: CMakeLists.txt
include/: CMakeLists.txt
include/calc/: CMakeLists.txt  calc.cpp  calc.h
include/connect/: CMakeLists.txt  connect.cpp  connect.h
include/converter/: CMakeLists.txt  converter.cpp  converter.h
include/interface/: CMakeLists.txt  interface.cpp  interface.h
include/parser/: CmakeLists.txt  parser.cpp  parser.h
include/stack/: CMakeLists.txt  stack.h
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
